# Hangman

./: Cargo.toml  README.md  words.txt
data/: homescreen.txt  words.txt
src/: lib.rs  main.rs
tests/: hangman.rs
