# Copyright © 2019 Bader Alshaya
# [This program is licensed under the "MIT License"]
# Please see the file LICENSE in the source
# distribution of this software for license terms.

[package]
name = "hangman"
version = "0.1.0"
authors = ["Bader Alshaya <alshayabader@gmail.com>"]
edition = "2018"

[lib]
name = "hangman"
path = "src/lib.rs"

[dependencies]
rand = "0.3"
colored = "1.8"
